--- a/client/src/App.css
+++ b/client/src/App.css
@@ -977,6 +977,7 @@ body.active-modal {
 
 .heart_btn.liked{
     color: var(--second-accent-color);
+    animation: liked .5s ease 1;
 }
 
 
@@ -984,6 +985,19 @@ body.active-modal {
     color: var(--text-color);
 }
 
+@keyframes liked {
+    0%{
+        font-size: 1rem;
+    }
+
+    50%{
+        transform: scale(1.25);
+    }
+
+    100%{
+        font-size: 1rem;
+    }
+}
 
 .left-buttons button:nth-child(2),
 .right-buttons button,
@@ -1126,7 +1140,7 @@ body.active-modal {
 
 .edit_image{
     display: flex;
-    color: var(--text-color);
+    color: var(--primary-color);
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -1378,8 +1392,8 @@ body.active-modal {
     padding: 0 1rem;
     /* background: rgba(134, 124, 124, 0.151); */
     border-radius: 10px;
-    height: fit-content;
-    max-height:520px;
+    height: 100%;
+    max-height:460px;
     overflow-y: hidden;
  }
 
