--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1046,7 +1046,7 @@ body.active-modal {
 .profile-wrapper{
     display: flex;
     width: 100%;
-    height: 100%;
+    min-height: 1190px;
 }
 
 .profile-container {
@@ -1227,7 +1227,7 @@ body.active-modal {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 25rem;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .profile-images li {
