--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,18 @@
 }
 
 
+::-webkit-scrollbar {
+    width: .5vw;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--primary-color);
+}
+
+::-webkit-scrollbar-thumb{
+    background: grey;
+    border-radius: 5vh;
+}
 /*Sign Up Css*/
 
 
@@ -190,7 +202,8 @@ body.active-modal {
 
 .navbar-wrapper {
     height: 100vh;
-    width: 350px;
+    width: 100%;
+    max-width: 325px;
     top: 0;
     position: sticky;
     background: var(--primary-color);
@@ -473,13 +486,12 @@ body.active-modal {
 .friendFinderWrapper {
     background: #f0f0f0;
     border-radius: 5px;
+    width: 100%;
     height: fit-content;
     max-height:375px;
     max-width: 500px;
     top: 0;
     left: 0;
-    right: 0;
-    margin: 0 auto;
     z-index: 2;
     position: absolute;
     overflow: hidden;
@@ -850,8 +862,9 @@ body.active-modal {
 
 
 .post-cont {
-    margin:  5rem auto 0;
+    margin:  0 auto 0;
     display: flex;
+    position: relative;
 }
 
 
@@ -859,6 +872,7 @@ body.active-modal {
 .post-wrapper {
     max-width: 500px;
     /* width: 100%; */
+    padding-top: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -877,7 +891,8 @@ body.active-modal {
 
 .post-image {
     width: 100%;
-    height: 500px;
+    height: 400px;
+    border-radius: 5vh;
     object-fit: cover;
     object-position: center;
 }
@@ -1069,6 +1084,8 @@ body.active-modal {
     position: absolute;
     width: 100%;
     height: 100%;
+    border-bottom-left-radius: 5vh;
+    border-bottom-right-radius: 5vh;
 }
 
 .image-container label {
@@ -1140,7 +1157,7 @@ body.active-modal {
 
 .edit_image{
     display: flex;
-    color: var(--primary-color);
+    color: #ffffff;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -1225,10 +1242,11 @@ body.active-modal {
     display: grid;
     gap: .1rem;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 25rem;
+    grid-auto-rows: 400px;
     overflow-x: hidden;
     overflow-y: auto;
 }
+
 
 .profile-images li {
     list-style: none;
@@ -1389,6 +1407,7 @@ body.active-modal {
  .content-wrapper {
     width: 383px;
     margin-left: 4rem;
+    margin-top: 3rem;
     padding: 0 1rem;
     /* background: rgba(134, 124, 124, 0.151); */
     border-radius: 10px;
