added some functionality to the messages and also started using socket.io in the front and backend

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1620,13 +1620,13 @@ body.active-modal {
 }
 
 .secondary-message p{
-    background: var(--second-accent-color);
+    background: var(--grey);
     width: fit-content;
     padding: 0.5rem;
 }
 
 .main-message p{
-    background: white;
+    background: var(--second-accent-color);
 }
 
 .main-message p, 
