--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1520,96 +1520,104 @@ body.active-modal {
 
 .messages-wrapper {
     display: flex;
-    max-width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
 .messages-container {
     width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    overflow-x: hidden;
+    display: grid;
+    grid-template-columns: 300px 1fr;
 }
 
 .people-container {
-    position: sticky;
-    top: 0;
     padding: 1rem;
-    height: fit-content;
-    z-index: 2;
     box-shadow: 0 0 1px var(--text-color);
 }
 
-.people-container ul::-webkit-scrollbar {
-    width: 1rem;
-  }
 
-.people-container ul::-webkit-scrollbar-thumb {
-    background: #888; 
-    border-radius: 10px;
-  }
-
-.people-container ul {
+.people-container-header {
     display: flex;
-    gap: 5rem;
-    overflow-x: auto;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.people-container li{
-    padding: 1.5rem 0.5rem;
-    list-style: none;
-    width:fit-content;
-    text-wrap: nowrap;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+.people-container-header span {
     cursor: pointer;
 }
 
-.people-container a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-decoration: none;
-    color: var(--text-color);
+.people-container ul {
+    margin-top: 1rem;
+    display: grid;
+    row-gap: .5rem;
 }
 
-.people-container a:focus img{
-    box-shadow: 0 0 5px var(--second-accent-color);
+.people-container li{
+    padding: 0.5rem;
+    border-radius: 2vh;
+    list-style: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;    
+}
+
+
+.people-container li div {
+    display: flex;
+    flex-direction: column;
+}
+.people-container li div span:nth-child(1) {
+    color: var(--text-color);
+    font-weight: 600;
+    padding: 0 .4rem;
+}
+
+.people-container li div span:nth-child(2) {
+    font-size: .85rem;
+    color: var(--text-color);
+    padding: 0 .4rem;
 }
 
 .people-container li img{
     border-radius: 50%;
-    width: 75px;
+    width: 65px;
     aspect-ratio: 1 / 1;
     margin-bottom: 0.5rem;
 }
 
-
-.people-messages-container {
-    display: flex;
-    flex: 1 1 auto;
-    overflow-y: hidden;
-}
-
 .chat-container {
-    width: 100%;
+    display: grid;
+    grid-template-rows: 125px 1fr 75px;
+    height: 100%;
 }
 
-.people-messages-container ul{
-    height: 100%;
+.chat-container ul {
+    padding: 1rem 0.5rem;
+}
+
+.chat_header {
+    display: flex;
+    align-items: center;
+    box-shadow: 1px 0 1px var(--text-color);
+}
+
+.chat_header img {
+    border-radius: 50%;
+    width: 90px;
+    aspect-ratio: 1 / 1;
+    margin: .5rem;
+}
+
+
+
+#chat-list{
     display: flex;
     flex-direction: column;
-    align-self: flex-end;
-    padding: 1rem;
-    gap: 1.25rem;
     overflow-y: scroll;
 }
 
 .people-messages-container li{
-    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -1620,7 +1628,7 @@ body.active-modal {
 }
 
 .secondary-message p{
-    background: var(--grey);
+    background: lightgrey;
     width: fit-content;
     padding: 0.5rem;
 }
@@ -1639,9 +1647,6 @@ body.active-modal {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: sticky;
-    background: white;
-    bottom: 0;
     width: 100%; 
     padding: .75rem;
 }
@@ -1652,20 +1657,12 @@ body.active-modal {
     background: rgba(134, 124, 124, 0.151);
     padding: 1rem;
     border-radius: 10px;
-    margin-right: 1rem;
 }
 
-.input-message-container button {
-    border: none;
-    border-radius: 5px;
-    background: var(--second-accent-color);
-    padding: .75rem 1rem;
-    cursor: pointer;
+.input-message-container input:focus {
+    outline: none;
 }
 
-.input-message-container button:hover  {
-    color: white;
-}
 
 @media (width < 550px) {
     .people-container li span {
